y.output
   0  $accept : file $end

   1  file : program
   2       | module

   3  program : PROGRAM declarations START body END
   4          | PROGRAM declarations START END
   5          | PROGRAM START body END

   6  declarations : declaration
   7               | declarations ';' declaration

   8  declaration : function
   9              | qualifier CONST variable ATTR literals
  10              | qualifier CONST variable
  11              | qualifier variable
  12              | CONST variable ATTR literals
  13              | CONST variable
  14              | variable ATTR literals
  15              | variable

  16  literals : literal
  17           | literals literal
  18           | literals ',' literal

  19  literal : LITERAL_I
  20          | LITERAL_C
  21          | LITERAL_S

  22  function : FUNCTION qualifier type IDENTIFICADOR variables DONE
  23           | FUNCTION qualifier type IDENTIFICADOR variables DO body
  24           | FUNCTION qualifier type IDENTIFICADOR DO body
  25           | FUNCTION qualifier type IDENTIFICADOR DONE
  26           | FUNCTION qualifier VOID IDENTIFICADOR variables DO body
  27           | FUNCTION qualifier VOID IDENTIFICADOR variables DONE
  28           | FUNCTION qualifier VOID IDENTIFICADOR DO body
  29           | FUNCTION qualifier VOID IDENTIFICADOR DONE
  30           | FUNCTION type IDENTIFICADOR variables DO body
  31           | FUNCTION type IDENTIFICADOR variables DONE
  32           | FUNCTION type IDENTIFICADOR DO body
  33           | FUNCTION type IDENTIFICADOR DONE
  34           | FUNCTION VOID IDENTIFICADOR variables DO body
  35           | FUNCTION VOID IDENTIFICADOR variables DONE
  36           | FUNCTION VOID IDENTIFICADOR DO body
  37           | FUNCTION VOID IDENTIFICADOR DONE

  38  qualifier : PUBLIC
  39            | FORWARD

  40  variables : variable
  41            | variables ';' variable

  42  variable : type IDENTIFICADOR '[' LITERAL_I ']'
  43           | type IDENTIFICADOR

  44  type : NUMBER
  45       | STRING
  46       | ARRAY

  47  body : variables ';' instructs
  48       | variables ';'
  49       | instructs

  50  instructs : instruct
  51            | instructs instruct

  52  instruct : IF expression THEN instructs elifs ELSE instructs FI
  53           | IF expression THEN instructs ELSE instructs FI
  54           | IF expression THEN instructs elifs FI
  55           | IF expression THEN instructs FI
  56           | IF expression THEN elifs FI
  57           | IF expression THEN FI
  58           | FOR expression UNTIL expression STEP expression DO instructs DONE
  59           | expression '!'
  60           | expression ';'
  61           | REPEAT
  62           | STOP
  63           | RETURN expression
  64           | RETURN
  65           | expression '#' expression ';'

  66  elifs : elif
  67        | elifs elif

  68  elif : ELIF expression THEN instructs

  69  args : expression
  70       | args ',' expression

  71  operator : '^'
  72           | '&'
  73           | '|'
  74           | '+'
  75           | '-'
  76           | '*'
  77           | '/'
  78           | '%'
  79           | '<'
  80           | '>'
  81           | '='
  82           | GE
  83           | LE
  84           | NE
  85           | ATTR

  86  expression : IDENTIFICADOR
  87             | literal
  88             | '?' expression
  89             | '-' expression
  90             | '&' expression
  91             | '~' expression
  92             | '?'
  93             | '(' expression ')'
  94             | '[' expression ']'
  95             | IDENTIFICADOR '(' args ')'
  96             | expression '[' expression ']'
  97             | expression operator expression

  98  module : MODULE declarations END
  99         | MODULE END

state 0
	$accept : . file $end  (0)

	PROGRAM  shift 1
	MODULE  shift 2
	.  error

	file  goto 3
	program  goto 4
	module  goto 5


state 1
	program : PROGRAM . declarations START body END  (3)
	program : PROGRAM . declarations START END  (4)
	program : PROGRAM . START body END  (5)

	START  shift 6
	CONST  shift 7
	NUMBER  shift 8
	ARRAY  shift 9
	STRING  shift 10
	FUNCTION  shift 11
	PUBLIC  shift 12
	FORWARD  shift 13
	.  error

	declarations  goto 14
	declaration  goto 15
	function  goto 16
	qualifier  goto 17
	variable  goto 18
	type  goto 19


state 2
	module : MODULE . declarations END  (98)
	module : MODULE . END  (99)

	END  shift 20
	CONST  shift 7
	NUMBER  shift 8
	ARRAY  shift 9
	STRING  shift 10
	FUNCTION  shift 11
	PUBLIC  shift 12
	FORWARD  shift 13
	.  error

	declarations  goto 21
	declaration  goto 15
	function  goto 16
	qualifier  goto 17
	variable  goto 18
	type  goto 19


state 3
	$accept : file . $end  (0)

	$end  accept


state 4
	file : program .  (1)

	.  reduce 1


state 5
	file : module .  (2)

	.  reduce 2


state 6
	program : PROGRAM START . body END  (5)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	NUMBER  shift 8
	ARRAY  shift 9
	STRING  shift 10
	IF  shift 26
	FOR  shift 27
	REPEAT  shift 28
	STOP  shift 29
	RETURN  shift 30
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	.  error

	instructs  goto 37
	instruct  goto 38
	body  goto 39
	variable  goto 40
	literal  goto 41
	type  goto 19
	variables  goto 42
	expression  goto 43


state 7
	declaration : CONST . variable ATTR literals  (12)
	declaration : CONST . variable  (13)

	NUMBER  shift 8
	ARRAY  shift 9
	STRING  shift 10
	.  error

	variable  goto 44
	type  goto 19


state 8
	type : NUMBER .  (44)

	.  reduce 44


state 9
	type : ARRAY .  (46)

	.  reduce 46


state 10
	type : STRING .  (45)

	.  reduce 45


state 11
	function : FUNCTION . qualifier type IDENTIFICADOR variables DONE  (22)
	function : FUNCTION . qualifier type IDENTIFICADOR variables DO body  (23)
	function : FUNCTION . qualifier type IDENTIFICADOR DO body  (24)
	function : FUNCTION . qualifier type IDENTIFICADOR DONE  (25)
	function : FUNCTION . qualifier VOID IDENTIFICADOR variables DO body  (26)
	function : FUNCTION . qualifier VOID IDENTIFICADOR variables DONE  (27)
	function : FUNCTION . qualifier VOID IDENTIFICADOR DO body  (28)
	function : FUNCTION . qualifier VOID IDENTIFICADOR DONE  (29)
	function : FUNCTION . type IDENTIFICADOR variables DO body  (30)
	function : FUNCTION . type IDENTIFICADOR variables DONE  (31)
	function : FUNCTION . type IDENTIFICADOR DO body  (32)
	function : FUNCTION . type IDENTIFICADOR DONE  (33)
	function : FUNCTION . VOID IDENTIFICADOR variables DO body  (34)
	function : FUNCTION . VOID IDENTIFICADOR variables DONE  (35)
	function : FUNCTION . VOID IDENTIFICADOR DO body  (36)
	function : FUNCTION . VOID IDENTIFICADOR DONE  (37)

	VOID  shift 45
	NUMBER  shift 8
	ARRAY  shift 9
	STRING  shift 10
	PUBLIC  shift 12
	FORWARD  shift 13
	.  error

	qualifier  goto 46
	type  goto 47


state 12
	qualifier : PUBLIC .  (38)

	.  reduce 38


state 13
	qualifier : FORWARD .  (39)

	.  reduce 39


state 14
	program : PROGRAM declarations . START body END  (3)
	program : PROGRAM declarations . START END  (4)
	declarations : declarations . ';' declaration  (7)

	START  shift 48
	';'  shift 49
	.  error


state 15
	declarations : declaration .  (6)

	.  reduce 6


state 16
	declaration : function .  (8)

	.  reduce 8


state 17
	declaration : qualifier . CONST variable ATTR literals  (9)
	declaration : qualifier . CONST variable  (10)
	declaration : qualifier . variable  (11)

	CONST  shift 50
	NUMBER  shift 8
	ARRAY  shift 9
	STRING  shift 10
	.  error

	variable  goto 51
	type  goto 19


state 18
	declaration : variable . ATTR literals  (14)
	declaration : variable .  (15)

	ATTR  shift 52
	START  reduce 15
	END  reduce 15
	';'  reduce 15


state 19
	variable : type . IDENTIFICADOR '[' LITERAL_I ']'  (42)
	variable : type . IDENTIFICADOR  (43)

	IDENTIFICADOR  shift 53
	.  error


state 20
	module : MODULE END .  (99)

	.  reduce 99


state 21
	declarations : declarations . ';' declaration  (7)
	module : MODULE declarations . END  (98)

	END  shift 54
	';'  shift 49
	.  error


state 22
	literal : LITERAL_I .  (19)

	.  reduce 19


state 23
	literal : LITERAL_S .  (21)

	.  reduce 21


state 24
	literal : LITERAL_C .  (20)

	.  reduce 20


25: shift/reduce conflict (shift 55, reduce 86) on '('
state 25
	expression : IDENTIFICADOR .  (86)
	expression : IDENTIFICADOR . '(' args ')'  (95)

	'('  shift 55
	LITERAL_I  reduce 86
	LITERAL_S  reduce 86
	LITERAL_C  reduce 86
	IDENTIFICADOR  reduce 86
	START  reduce 86
	END  reduce 86
	IF  reduce 86
	THEN  reduce 86
	ELSE  reduce 86
	ELIF  reduce 86
	FI  reduce 86
	FOR  reduce 86
	UNTIL  reduce 86
	STEP  reduce 86
	DO  reduce 86
	DONE  reduce 86
	REPEAT  reduce 86
	STOP  reduce 86
	RETURN  reduce 86
	ATTR  reduce 86
	'^'  reduce 86
	GE  reduce 86
	LE  reduce 86
	NE  reduce 86
	'>'  reduce 86
	'<'  reduce 86
	'+'  reduce 86
	'-'  reduce 86
	'*'  reduce 86
	'/'  reduce 86
	'%'  reduce 86
	'&'  reduce 86
	'|'  reduce 86
	';'  reduce 86
	','  reduce 86
	'['  reduce 86
	']'  reduce 86
	'!'  reduce 86
	'#'  reduce 86
	'='  reduce 86
	'?'  reduce 86
	'~'  reduce 86
	')'  reduce 86


state 26
	instruct : IF . expression THEN instructs elifs ELSE instructs FI  (52)
	instruct : IF . expression THEN instructs ELSE instructs FI  (53)
	instruct : IF . expression THEN instructs elifs FI  (54)
	instruct : IF . expression THEN instructs FI  (55)
	instruct : IF . expression THEN elifs FI  (56)
	instruct : IF . expression THEN FI  (57)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	.  error

	literal  goto 41
	expression  goto 56


state 27
	instruct : FOR . expression UNTIL expression STEP expression DO instructs DONE  (58)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	.  error

	literal  goto 41
	expression  goto 57


state 28
	instruct : REPEAT .  (61)

	.  reduce 61


state 29
	instruct : STOP .  (62)

	.  reduce 62


30: shift/reduce conflict (shift 22, reduce 64) on LITERAL_I
30: shift/reduce conflict (shift 23, reduce 64) on LITERAL_S
30: shift/reduce conflict (shift 24, reduce 64) on LITERAL_C
30: shift/reduce conflict (shift 25, reduce 64) on IDENTIFICADOR
30: shift/reduce conflict (shift 31, reduce 64) on '-'
30: shift/reduce conflict (shift 32, reduce 64) on '&'
30: shift/reduce conflict (shift 33, reduce 64) on '['
30: shift/reduce conflict (shift 34, reduce 64) on '?'
30: shift/reduce conflict (shift 35, reduce 64) on '~'
30: shift/reduce conflict (shift 36, reduce 64) on '('
state 30
	instruct : RETURN . expression  (63)
	instruct : RETURN .  (64)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	START  reduce 64
	END  reduce 64
	IF  reduce 64
	ELSE  reduce 64
	ELIF  reduce 64
	FI  reduce 64
	FOR  reduce 64
	DONE  reduce 64
	REPEAT  reduce 64
	STOP  reduce 64
	RETURN  reduce 64
	';'  reduce 64

	literal  goto 41
	expression  goto 58


state 31
	expression : '-' . expression  (89)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	.  error

	literal  goto 41
	expression  goto 59


state 32
	expression : '&' . expression  (90)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	.  error

	literal  goto 41
	expression  goto 60


state 33
	expression : '[' . expression ']'  (94)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	.  error

	literal  goto 41
	expression  goto 61


34: shift/reduce conflict (shift 22, reduce 92) on LITERAL_I
34: shift/reduce conflict (shift 23, reduce 92) on LITERAL_S
34: shift/reduce conflict (shift 24, reduce 92) on LITERAL_C
34: shift/reduce conflict (shift 25, reduce 92) on IDENTIFICADOR
34: shift/reduce conflict (shift 31, reduce 92) on '-'
34: shift/reduce conflict (shift 32, reduce 92) on '&'
34: shift/reduce conflict (shift 33, reduce 92) on '['
34: shift/reduce conflict (shift 34, reduce 92) on '?'
34: shift/reduce conflict (shift 35, reduce 92) on '~'
34: shift/reduce conflict (shift 36, reduce 92) on '('
state 34
	expression : '?' . expression  (88)
	expression : '?' .  (92)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	START  reduce 92
	END  reduce 92
	IF  reduce 92
	THEN  reduce 92
	ELSE  reduce 92
	ELIF  reduce 92
	FI  reduce 92
	FOR  reduce 92
	UNTIL  reduce 92
	STEP  reduce 92
	DO  reduce 92
	DONE  reduce 92
	REPEAT  reduce 92
	STOP  reduce 92
	RETURN  reduce 92
	ATTR  reduce 92
	'^'  reduce 92
	GE  reduce 92
	LE  reduce 92
	NE  reduce 92
	'>'  reduce 92
	'<'  reduce 92
	'+'  reduce 92
	'*'  reduce 92
	'/'  reduce 92
	'%'  reduce 92
	'|'  reduce 92
	';'  reduce 92
	','  reduce 92
	']'  reduce 92
	'!'  reduce 92
	'#'  reduce 92
	'='  reduce 92
	')'  reduce 92

	literal  goto 41
	expression  goto 62


state 35
	expression : '~' . expression  (91)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	.  error

	literal  goto 41
	expression  goto 63


state 36
	expression : '(' . expression ')'  (93)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	.  error

	literal  goto 41
	expression  goto 64


state 37
	body : instructs .  (49)
	instructs : instructs . instruct  (51)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	IF  shift 26
	FOR  shift 27
	REPEAT  shift 28
	STOP  shift 29
	RETURN  shift 30
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	START  reduce 49
	END  reduce 49
	';'  reduce 49

	instruct  goto 65
	literal  goto 41
	expression  goto 43


state 38
	instructs : instruct .  (50)

	.  reduce 50


state 39
	program : PROGRAM START body . END  (5)

	END  shift 66
	.  error


state 40
	variables : variable .  (40)

	.  reduce 40


state 41
	expression : literal .  (87)

	.  reduce 87


state 42
	variables : variables . ';' variable  (41)
	body : variables . ';' instructs  (47)
	body : variables . ';'  (48)

	';'  shift 67
	.  error


state 43
	instruct : expression . '!'  (59)
	instruct : expression . ';'  (60)
	instruct : expression . '#' expression ';'  (65)
	expression : expression . '[' expression ']'  (96)
	expression : expression . operator expression  (97)

	ATTR  shift 68
	'^'  shift 69
	GE  shift 70
	LE  shift 71
	NE  shift 72
	'>'  shift 73
	'<'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'/'  shift 78
	'%'  shift 79
	'&'  shift 80
	'|'  shift 81
	';'  shift 82
	'['  shift 83
	'!'  shift 84
	'#'  shift 85
	'='  shift 86
	.  error

	operator  goto 87


state 44
	declaration : CONST variable . ATTR literals  (12)
	declaration : CONST variable .  (13)

	ATTR  shift 88
	START  reduce 13
	END  reduce 13
	';'  reduce 13


state 45
	function : FUNCTION VOID . IDENTIFICADOR variables DO body  (34)
	function : FUNCTION VOID . IDENTIFICADOR variables DONE  (35)
	function : FUNCTION VOID . IDENTIFICADOR DO body  (36)
	function : FUNCTION VOID . IDENTIFICADOR DONE  (37)

	IDENTIFICADOR  shift 89
	.  error


state 46
	function : FUNCTION qualifier . type IDENTIFICADOR variables DONE  (22)
	function : FUNCTION qualifier . type IDENTIFICADOR variables DO body  (23)
	function : FUNCTION qualifier . type IDENTIFICADOR DO body  (24)
	function : FUNCTION qualifier . type IDENTIFICADOR DONE  (25)
	function : FUNCTION qualifier . VOID IDENTIFICADOR variables DO body  (26)
	function : FUNCTION qualifier . VOID IDENTIFICADOR variables DONE  (27)
	function : FUNCTION qualifier . VOID IDENTIFICADOR DO body  (28)
	function : FUNCTION qualifier . VOID IDENTIFICADOR DONE  (29)

	VOID  shift 90
	NUMBER  shift 8
	ARRAY  shift 9
	STRING  shift 10
	.  error

	type  goto 91


state 47
	function : FUNCTION type . IDENTIFICADOR variables DO body  (30)
	function : FUNCTION type . IDENTIFICADOR variables DONE  (31)
	function : FUNCTION type . IDENTIFICADOR DO body  (32)
	function : FUNCTION type . IDENTIFICADOR DONE  (33)

	IDENTIFICADOR  shift 92
	.  error


state 48
	program : PROGRAM declarations START . body END  (3)
	program : PROGRAM declarations START . END  (4)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	END  shift 93
	NUMBER  shift 8
	ARRAY  shift 9
	STRING  shift 10
	IF  shift 26
	FOR  shift 27
	REPEAT  shift 28
	STOP  shift 29
	RETURN  shift 30
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	.  error

	instructs  goto 37
	instruct  goto 38
	body  goto 94
	variable  goto 40
	literal  goto 41
	type  goto 19
	variables  goto 42
	expression  goto 43


state 49
	declarations : declarations ';' . declaration  (7)

	CONST  shift 7
	NUMBER  shift 8
	ARRAY  shift 9
	STRING  shift 10
	FUNCTION  shift 11
	PUBLIC  shift 12
	FORWARD  shift 13
	.  error

	declaration  goto 95
	function  goto 16
	qualifier  goto 17
	variable  goto 18
	type  goto 19


state 50
	declaration : qualifier CONST . variable ATTR literals  (9)
	declaration : qualifier CONST . variable  (10)

	NUMBER  shift 8
	ARRAY  shift 9
	STRING  shift 10
	.  error

	variable  goto 96
	type  goto 19


state 51
	declaration : qualifier variable .  (11)

	.  reduce 11


state 52
	declaration : variable ATTR . literals  (14)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	.  error

	literals  goto 97
	literal  goto 98


state 53
	variable : type IDENTIFICADOR . '[' LITERAL_I ']'  (42)
	variable : type IDENTIFICADOR .  (43)

	'['  shift 99
	START  reduce 43
	END  reduce 43
	DO  reduce 43
	DONE  reduce 43
	ATTR  reduce 43
	';'  reduce 43


state 54
	module : MODULE declarations END .  (98)

	.  reduce 98


state 55
	expression : IDENTIFICADOR '(' . args ')'  (95)

	LITERAL_I  shift 22
	LITERAL_S  shift 23
	LITERAL_C  shift 24
	IDENTIFICADOR  shift 25
	'-'  shift 31
	'&'  shift 32
	'['  shift 33
	'?'  shift 34
	'~'  shift 35
	'('  shift 36
	.  error

	literal  goto 41
	expression  goto 100
	args  goto 101


state 56
	instruct : IF expression . THEN instructs elifs ELSE instructs FI  (52)
	instruct : IF expression . THEN instructs ELSE instructs FI  (53)
	instruct : IF expression . THEN instructs elifs FI  (54)
	instruct : IF expression . THEN instructs FI  (55)
	instruct : IF expression . THEN elifs FI  (56)
	instruct : IF expression . THEN FI  (57)
	expression : expression . '[' expression ']'  (96)
	expression : expression . operator expression  (97)

	THEN  shift 102
	ATTR  shift 68
	'^'  shift 69
	GE  shift 70
	LE  shift 71
	NE  shift 72
	'>'  shift 73
	'<'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'/'  shift 78
	'%'  shift 79
	'&'  shift 80
	'|'  shift 81
	'['  shift 83
	'='  shift 86
	.  error

	operator  goto 87


state 57
	instruct : FOR expression . UNTIL expression STEP expression DO instructs DONE  (58)
	expression : expression . '[' expression ']'  (96)
	expression : expression . operator expression  (97)

	UNTIL  shift 103
	ATTR  shift 68
	'^'  shift 69
	GE  shift 70
	LE  shift 71
	NE  shift 72
	'>'  shift 73
	'<'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'/'  shift 78
	'%'  shift 79
	'&'  shift 80
	'|'  shift 81
	'['  shift 83
	'='  shift 86
	.  error

	operator  goto 87


58: shift/reduce conflict (shift 76, reduce 63) on '-'
58: shift/reduce conflict (shift 80, reduce 63) on '&'
58: shift/reduce conflict (shift 83, reduce 63) on '['
state 58
	instruct : RETURN expression .  (63)
	expression : expression . '[' expression ']'  (96)
	expression : expression . operator expression  (97)

	ATTR  shift 68
	'^'  shift 69
	GE  shift 70
	LE  shift 71
	NE  shift 72
	'>'  shift 73
	'<'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'/'  shift 78
	'%'  shift 79
	'&'  shift 80
	'|'  shift 81
	'['  shift 83
	'='  shift 86
	LITERAL_I  reduce 63
	LITERAL_S  reduce 63
	LITERAL_C  reduce 63
	IDENTIFICADOR  reduce 63
	START  reduce 63
	END  reduce 63
	IF  reduce 63
	ELSE  reduce 63
	ELIF  reduce 63
	FI  reduce 63
	FOR  reduce 63
	DONE  reduce 63
	REPEAT  reduce 63
	STOP  reduce 63
	RETURN  reduce 63
	';'  reduce 63
	'?'  reduce 63
	'~'  reduce 63
	'('  reduce 63

	operator  goto 87


59: shift/reduce conflict (shift 83, reduce 89) on '['
59: shift/reduce conflict (shift 86, reduce 89) on '='
state 59
	expression : '-' expression .  (89)
	expression : expression . '[' expression ']'  (96)
	expression : expression . operator expression  (97)

	'['  shift 83
	'='  shift 86
	LITERAL_I  reduce 89
	LITERAL_S  reduce 89
	LITERAL_C  reduce 89
	IDENTIFICADOR  reduce 89
	START  reduce 89
	END  reduce 89
	IF  reduce 89
	THEN  reduce 89
	ELSE  reduce 89
	ELIF  reduce 89
	FI  reduce 89
	FOR  reduce 89
	UNTIL  reduce 89
	STEP  reduce 89
	DO  reduce 89
	DONE  reduce 89
	REPEAT  reduce 89
	STOP  reduce 89
	RETURN  reduce 89
	ATTR  reduce 89
	'^'  reduce 89
	GE  reduce 89
	LE  reduce 89
	NE  reduce 89
	'>'  reduce 89
	'<'  reduce 89
	'+'  reduce 89
	'-'  reduce 89
	'*'  reduce 89
	'/'  reduce 89
	'%'  reduce 89
	'&'  reduce 89
	'|'  reduce 89
	';'  reduce 89
	','  reduce 89
	']'  reduce 89
	'!'  reduce 89
	'#'  reduce 89
	'?'  reduce 89
	'~'  reduce 89
	'('  reduce 89
	')'  reduce 89

	operator  goto 87


60: shift/reduce conflict (shift 83, reduce 90) on '['
60: shift/reduce conflict (shift 86, reduce 90) on '='
state 60
	expression : '&' expression .  (90)
	expression : expression . '[' expression ']'  (96)
	expression : expression . operator expression  (97)

	'['  shift 83
	'='  shift 86
	LITERAL_I  reduce 90
	LITERAL_S  reduce 90
	LITERAL_C  reduce 90
	IDENTIFICADOR  reduce 90
	START  reduce 90
	END  reduce 90
	IF  reduce 90
	THEN  reduce 90
	ELSE  reduce 90
	ELIF  reduce 90
	FI  reduce 90
	FOR  reduce 90
	UNTIL  reduce 90
	STEP  reduce 90
	DO  reduce 90
	DONE  reduce 90
	REPEAT  reduce 90
	STOP  reduce 90
	RETURN  reduce 90
	ATTR  reduce 90
	'^'  reduce 90
	GE  reduce 90
	LE  reduce 90
	NE  reduce 90
	'>'  reduce 90
	'<'  reduce 90
	'+'  reduce 90
	'-'  reduce 90
	'*'  reduce 90
	'/'  reduce 90
	'%'  reduce 90
	'&'  reduce 90
	'|'  reduce 90
	';'  reduce 90
	','  reduce 90
	']'  reduce 90
	'!'  reduce 90
	'#'  reduce 90
	'?'  reduce 90
	'~'  reduce 90
	'('  reduce 90
	')'  reduce 90

	operator  goto 87


state 61
	expression : '[' expression . ']'  (94)
	expression : expression . '[' expression ']'  (96)
	expression : expression . operator expression  (97)
